MOZGlobalAppearance doesn't account for ui.systemUsesDarkTheme
Categories
(Core :: Widget: Cocoa, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox127 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
Details
Attachments
(2 files)
Which means that changing that causes e.g. a light titlebar but dark toolbar and other unreadable stuff.
| Assignee | ||
Comment 1•2 years ago
|
||
Make it account for stuff like ui.systemUsesDarkTheme, otherwise the
chrome and macOS may have a different idea about what the global
appearance is.
Remove observer from nsLookAndFeel. Nothing in nsLookAndFeel reads from
MOZGlobalAppearance, and we want the MOZGlobalAppearance to derive from
nsLookAndFeel, not the other way around.
Updated•2 years ago
|
| Assignee | ||
Comment 2•2 years ago
|
||
Instead of relying on the embedder color-scheme directly, use the
color-scheme property to determine the nsCocoaWindow's appearance.
This is more in line with what content does, would've prevented this bug
from existing altogether, and avoids the need for MOZGlobalAppearance.
Comment 3•1 year ago
|
||
The severity field is not set for this bug.
:spohl, could you have a look please?
For more information, please visit BugBot documentation.
Updated•1 year ago
|
Comment 5•1 year ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/5f2ae428fb88
https://hg.mozilla.org/mozilla-central/rev/91cfcfc5935b
Description
•