Bug 1890576 - Simplify and make MOZGlobalAppearance more correct. r=mstange,mac-reviewers

Make it account for stuff like ui.systemUsesDarkTheme, otherwise the
chrome and macOS may have a different idea about what the global
appearance is.

Remove observer from nsLookAndFeel. Nothing in nsLookAndFeel reads from
MOZGlobalAppearance, and we want the MOZGlobalAppearance to derive from
nsLookAndFeel, not the other way around.

Differential Revision: https://phabricator.services.mozilla.com/D207049