layout/style/PreferenceSheet.cpp
@@ -11,7 +11,6 @@
 #include "mozilla/Encoding.h"
 #include "mozilla/Preferences.h"
 #include "mozilla/StaticPrefs_browser.h"
-#include "mozilla/StaticPrefs_devtools.h"
 #include "mozilla/StaticPrefs_layout.h"
 #include "mozilla/StaticPrefs_widget.h"
 #include "mozilla/StaticPrefs_ui.h"
@@ -22,6 +21,10 @@
 #include "nsContentUtils.h"
 
 #define AVG2(a, b) (((a) + (b) + 1) >> 1)
+
+#ifdef XP_MACOSX
+void OverrideGlobalAppearance(mozilla::ColorScheme);
+#endif
 
 namespace mozilla {
 
@@ -270,6 +273,10 @@ void PreferenceSheet::Initialize() {
       sPrintPrefs.mUseStandins = true;
     }
   }
+
+#ifdef XP_MACOSX
+  OverrideGlobalAppearance(sChromePrefs.mColorScheme);
+#endif
 
   nsAutoString useDocumentColorPref;
   switch (StaticPrefs::browser_display_document_color_use()) {
